<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav.home.home"
        android:icon="@mipmap/ic_tab_home"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav.home.voucher"
        android:icon="@mipmap/ic_tab_voucher"
        android:title="@string/nav_voucher"/>

    <item
        android:id="@+id/nav.home.member"
        android:icon="@mipmap/ic_tab_member_card"
        android:title="@string/nav_member"/>

    <item
        android:id="@+id/nav.home.favorite"
        android:icon="@mipmap/ic_favorite_2"
        android:title="@string/nav_favorite"/>

    <item
        android:id="@+id/nav.home.account"
        android:icon="@mipmap/ic_user_2"
        android:title="@string/nav_account"/>
</menu>