<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroud_main"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView style="@style/img_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/size_30"
            android:paddingRight="@dimen/size_30">

            <Button
                android:id="@+id/btn_phone_login"
                style="@style/btn_out_line_login"
                android:text="@string/action_login_with_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_8"
                android:layout_marginTop="@dimen/size_8"
                android:gravity="center"
                android:text="@string/tv_or"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_48"
                    android:layout_marginRight="@dimen/size_16"
                    android:layout_weight="1">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_48">

                        <ImageView
                            android:layout_width="@dimen/size_48"
                            android:layout_height="@dimen/size_48"
                            android:padding="@dimen/size_10"
                            android:src="@mipmap/ic_facebook" />

                        <Button
                            android:id="@+id/btn_facebook_login"
                            style="@style/btn_out_line_login"
                            android:text="@string/action_login_with_facebook" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_48"
                    android:layout_marginLeft="@dimen/size_16"
                    android:layout_weight="1">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_48">

                        <ImageView
                            android:layout_width="@dimen/size_48"
                            android:layout_height="@dimen/size_48"
                            android:padding="@dimen/size_10"
                            android:src="@mipmap/ic_twitter" />

                        <Button
                            style="@style/btn_out_line_login"
                            android:text="@string/action_login_with_twitter" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_signup"
                style="@style/textView_style_login"
                android:layout_marginBottom="@dimen/size_42"
                android:text="@string/tv_do_not_have_an_acc" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>